k8s/apps/default/sabnzbd/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      hostname: sabnzbd
      volumes:
        - name: arr-media
          nfs:
            server: nas.cbannister.casa
            path: /mnt/bighorse/arr
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd
        - name: scripts
          configMap:
            name: sabnzbd-scripts
            defaultMode: 0777
        - name: tmp
          emptyDir: {}
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 3005
        supplementalGroups: [3005]
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: sabnzbd
          image: ghcr.io/home-operations/sabnzbd:5.1.3@sha256:b1795982db498ed5691a7b1231f0fac7eed2a1d53e9c81b8e834d02695e76104
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 512Mi
              cpu: 2000m
            limits:
              memory: 3584Mi
          ports:
            - containerPort: 8080
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: arr-media
              mountPath: /data/downloads/usenet
              subPath: downloads/usenet
            - name: scripts
              mountPath: /config/scripts
            - name: tmp
              mountPath: /tmp
          startupProbe:
            httpGet:
              path: /api?mode=version
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api?mode=version
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
