k8s/apps/default/sabnzbd/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
spec:
  ingressClassName: internal
  rules:
    - host: &host sabnzbd.cbannister.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: http
  tls:
    - hosts:
        - *host
